nat_gateway.tf
resource "aws_nat_gateway" "vpc_nat_gateway" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public-1.id

  tags = {
    Name = "Gateway NAT"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.internet_gateway]
}


resource "aws_eip" "eip" {
  vpc      = true
}
